--- a/doc/manual/viennagrid.bib
+++ b/doc/manual/viennagrid.bib
@@ -108,6 +108,11 @@
    title = {{OpenDX}},
    URL = {http://www.opendx.org/}
 }
+% -----------------------------------------------
+@misc{tetgen,
+   title = {{TetGen}},
+   URL = {http://tetgen.berlios.de/}
+}
 
 
 
